--- a/backend/autoria_clone/moderation/moderation_list.html
+++ b/backend/autoria_clone/moderation/moderation_list.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Moderation List</title>
 </head>
 <body>
-
+    <h1>Moderation List</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in items %}
+                <tr>
+                    <td>{{ item.id }}</td>
+                    <td>{{ item.title }}</td>
+                    <td>{{ item.description }}</td>
+                    <td>
+                        <a href="{{ url_for('moderate', id=item.id) }}">Moderate</a>
+                    </td></tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </body>
 </html>
